--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,10 @@
     text-align: center;
     vertical-align: top;
 }
+.table-calendar th{
+    background: aliceblue;
+}
+
 .date-picker.selected {
     font-weight: bold;
     color: #fff;
@@ -51,8 +55,14 @@
     color: blue;
 }
 #monthAndYear {
-    text-align: center;
+    font-size: 28px;
+    text-align: left;
     margin-top: 0;
+}
+
+#month_eng {
+    color: gray;
+    font-size: 18px;
 }
 .button-container-calendar {
     position: relative;
